# oxidized-iron

./: .gitignore  Cargo.toml  docker-compose.yaml
migrations/: V1_1__Init_DB.sql  V1_1__Init_Schema.sql  V1_2__Init_Dummy_Data.sql
src/: api.rs  data.rs  domain.rs  external.rs  lib.rs  main.rs  view.rs
src/api/: query_structs.rs  routine_workouts.rs  routines.rs  workouts.rs
src/domain/: exercise.rs  lifting_log_entry.rs  mod.rs  routine.rs  workout.rs
src/driven/: mod.rs  postgres_repo.rs  repository.rs
src/driving/: htmx_handler.rs  mod.rs
src/driving/htmx_handler/: exercise.rs  lifting_log_entry.rs  mod.rs  routine.rs  workout.rs
src/view/: create_routine.rs  create_workout.rs  head.rs  index.rs  routine.rs  routine_workouts.rs  routines.rs  workouts.rs
templates/: base.html  create_or_edit_routine.html  create_routine.html  edit_routine.html  index.html  routine.html  routine_row.html  view_routine.html
