[package]
name = "oxidize-rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["tracing"] }
leptos = "0.5.4"
leptos_axum = "0.5.4"
tokio = { version = "1.35.1", features = ["full"] }
