[package]
name = "oxidized-iron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["tracing", "macros"] }
leptos = "0.5.4"
leptos_axum = "0.5.4"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.*", features = ["serde"] }
